examples/test/testpolicy1598.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1598
  namespace: namespace430
spec:
  podSelector:
    matchLabels:
      key8: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value16
          key7: value29
          key45: value8
      podSelector:
        matchLabels:
          key17: value19
